--- a/app/views/themes/waterfall/wine_details/share/_spec.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_spec.html.erb
@@ -2,11 +2,13 @@
 	<%= theme_image_tag "test/wine_id_pic.jpg" %>
 </div>
 <div class="info">
+	<% unless  @wine.winery.nil? %>
 	酒庄：<%= link_to @wine.winery.name,
               :controller => "wineries",
               :action => 'show',
               :id => @wine.winery.id %>
   <br />
+	<% end %>
 	官网：<%= link_to @wine.official_site, 'http://' + @wine.official_site, :target => '_blank' %><br />
 	产区：<%= render 'share/region_tree', :region_tree => @wine_detail.get_region_path(@wine_detail.wine.region_tree_id) %><br />
 	France>Burgundy>Côte de Nuits>Vosne-Romanée>Romanée-Conti (Grand Cru AOC)<br />
