--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -8,7 +8,7 @@ h1.zh a {font-size:14px;color:#333;}
 h1.en a {font-size:12px;color:#999;font-weight:normal;}
 h1.en a:hover {color:#999;text-decoration:none;}
 h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h1.zh a:hover {color:#993333;text-decoration:none;}
-h1.main_title {font-size:18px;}
+h1.main_title {font-size:18px;margin: 0 0 20px 0;}
 li {list-style:none;}
 a, .username a:hover, .more a, .control a{color:#993333;text-decoration:none;}
 a:hover {text-decoration:underline;}
@@ -28,6 +28,8 @@ i {color:#ccc;}
 .mb20 {margin-bottom:20px;}
 .mb30 {margin-bottom:30px;}
 .mb40 {margin-bottom:40px;}
+.ml20 {margin-left:20px;}
+.ml10 {margin-left:10px;}
 .ptb10 {padding-top:10px;padding-bottom:10px;}
 .pt5 {padding-top:5px;}
 .pt60 {padding-top:60px;}
@@ -82,9 +84,10 @@ input.common_search {width:250px;}
 .myform .left {width:500px;float:left;margin-right:20px;}
 .myform .right {float:left;}
 /*--------- stylized ---------- */
-.myform .left div {float:left;display:block;margin-bottom:10px;width:500px;} 
+.myform .required, .myform .optional  {float:left;display:block;margin-bottom:10px;width:800px;} 
+.myform .left .required, .myform .left .optional {width:500px;}
 .myform .main div {float:left;display:block;margin-bottom:10px;width:680px;}
-#stylized{}
+.myform .error {padding:5px 10px;width:150px;text-align:left;display:inline-block;}
 #stylized h1 {font-size:14px;font-weight:bold;margin-bottom:8px;}
 #stylized .required label span {color:#F00;}
 #stylized label{display:block; font-weight:bold;text-align:right;width:100px;float:left;margin: 0 20px 10px 0;}
@@ -98,6 +101,7 @@ input.price, input.g_type {width:70px;}
 input.count{width:30px;}
 input.year, input.percent  {width:50px;}
 textarea.wine_intro {width:500px;height:200px;}
+#stylized label.w50 {width:50px;text-align:left;margin:0;}
 
 /*icon*/
 .icon_mail, .icon_like, .icon_add_album, .icon_delet, .icon_edit, .icon_add, .icon_delet2, .icon_comment, .icon_fol, .icon_fol_e, .icon_cellar {background:url(../images/icon/icon_all.gif) no-repeat;display:inline-block;}
@@ -197,7 +201,7 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .data_style1 td {background-color:#f3f3f3;border-right:2px solid #fff;border-bottom:2px solid #fff;padding:2px 10px;}
 
 /*header*/
-#header {background:url(../images/bg/header_bg.png) repeat-x top left; height:52px;color:#fff; position:relative;padding-top:8px;}
+#header {background:url(../images/bg/header_bg.png) repeat-x top left; height:52px;color:#fff; position:relative;padding-top:8px;box-shadow: 0 1px 2px 1px #E0E0E0;}
 #header .main950 {width:950px;margin:0 auto;position:relative;}
 #header .main860 {width:860px;margin:0 auto;}
 #header #logo {width:300px;float:left;}
@@ -231,6 +235,8 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
     padding: 5px 10px;
     text-decoration: none;
 }
+.globel_navi {padding:10px;text-align:center;background:url(../images/bg/bg.jpg) repeat; border-bottom:1px solid #ccc;font-size:14px;font-weight:bold;}
+.globel_navi span a{display:inline-block;margin:0 20px;}
 
 /*main space*/
 #wrapper950 {width:950px;margin: 30px auto;}
