Update theme about albums
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/admin/wines_details/_form.html.erb
+++ b/app/views/admin/wines_details/_form.html.erb
@@ -108,7 +108,7 @@
         <tr>
           <td><label>图片</label></td>
           <td>
-            <%=  image_tag @wines_detail.photos.first.image_url(:w_thumb) if @wines_detail.photos.first %>
+            <%=  image_tag @wines_detail.photos.first.image_url(:thumb) if @wines_detail.photos.first %>
           </td>
         </tr>
         <tr>
