--- a/app/views/mine/share/_wine_follows.html.erb
+++ b/app/views/mine/share/_wine_follows.html.erb
@@ -1,7 +1,7 @@
 <% @comments.each do |comment| %>
   <div class="item relative dotted">
     <div class="pic">
-	 <%= wine_cover_tag comment.commentable, :thumb_name => :w_thumb, :width => 90, :height => 90 %>
+	 <%= wine_cover_tag comment.commentable, :thumb_name => :thumb, :width => 90, :height => 90 %>
     </div>
     <p class="wine_info">
       <h4>
