--- a/app/views/settings/avatar.html.erb
+++ b/app/views/settings/avatar.html.erb
@@ -64,7 +64,7 @@
     </tr>
     <tr>
       <td>
-        <%= image_tag "v2/user_thumb_example.png", :align => "left", :class => "preview_thumb" %>   小图 <i> 30x30px</i>
+        <%= image_tag "v2/user_thumb_example.png", :align => "left", :class => "previethumb" %>   小图 <i> 30x30px</i>
       </td>
     </tr>
   </table>
