--- a/app/views/themes/waterfall/mine/cellar_items/add_step_two.html.erb
+++ b/app/views/themes/waterfall/mine/cellar_items/add_step_two.html.erb
@@ -31,7 +31,7 @@
                         <span>加入酒窖</span>
                     <% end %>
                   </div>
-                  <div class="wine_img"><%= wine_cover_tag( wine_detail, :thumb_name => "w_thumb", :width => "50", :height => "63" ) %></div>
+                  <div class="wine_img"><%= wine_cover_tag( wine_detail, :thumb_name => "thumb", :width => "50", :height => "63" ) %></div>
                   <div class="wine_info">
                     <h2><a href="wine_profile.html"><%= wine_detail.cname %></a></h2>
                     <h3><%= wine_detail.ename %></h3>
