--- a/app/views/themes/waterfall/mine/followers.html.erb
+++ b/app/views/themes/waterfall/mine/followers.html.erb
@@ -1,4 +1,5 @@
-<div class="<%= controller_name  %> index user_follows">
+<div class="whitespace">
+<div id="hp">
   <%= render "mine/sub_nav", :action => params[:action] %>
   <div class="clear"></div>
 
@@ -35,5 +36,5 @@
   </div>
   <!-- .mine end -->
 </div>
-
+</div>
 <div class="clear"></div>
