--- a/app/views/themes/waterfall/wineries/photo.html.erb
+++ b/app/views/themes/waterfall/wineries/photo.html.erb
@@ -35,7 +35,7 @@
             </div>
             
             <div class="photo">
-              <%= image_tag @photo.image_url(:wy_large), :alt => @photo.intro %>
+              <%= image_tag @photo.image_url(:middle_x), :alt => @photo.intro %>
             </div>
 
             <div class="info">
