--- a/app/views/wine_details/photos/_photo.html.erb
+++ b/app/views/wine_details/photos/_photo.html.erb
@@ -1,1 +1,1 @@
-<%= link_to image_tag(photo.image_url(:w_thumb)), wine_photo_path(@wine_detail.id, photo.id) %>
+<%= link_to image_tag(photo.image_url(:thumb)), wine_photo_path(@wine_detail.id, photo.id) %>
