--- a/app/views/mine/share/_following_wines.html.erb
+++ b/app/views/mine/share/_following_wines.html.erb
@@ -1,9 +1,9 @@
 <% @following_wines.each_with_index do  |comment, index| %>
 <% if index > 1 %>
-<%= link_to wine_cover_tag(comment.commentable, :thumb_name => :w_thumb, :width => 100, :height => 100, :align => "center"), wine_path(comment.commentable.id) %>
+<%= link_to wine_cover_tag(comment.commentable, :thumb_name => :thumb, :width => 100, :height => 100, :align => "center"), wine_path(comment.commentable.id) %>
 <% else %>
 <div class="large_list">
-  <%= link_to wine_cover_tag(comment.commentable, :thumb_name => :w_thumb, :width => 203, :height => 203, :align => "left"), wine_path(comment.commentable.id) %>
+  <%= link_to wine_cover_tag(comment.commentable, :thumb_name => :thumb, :width => 203, :height => 203, :align => "left"), wine_path(comment.commentable.id) %>
 </div>
 <% end %>
 <% end %>
