--- a/app/views/themes/waterfall/mine/albums/edit.html.erb
+++ b/app/views/themes/waterfall/mine/albums/edit.html.erb
@@ -1,4 +1,5 @@
-<div class="<%= controller_name  %> albums">
+<div class="whitespace">
+<div id="hp">
 <%#= render "/mine/sub_nav", :action => params[:action] %>
 <div class="clear"></div>
 
@@ -23,4 +24,5 @@
 </div>
 <div class="clear"></div>
 <!-- end mine -->
+</div>
 </div>
