--- a/app/views/themes/waterfall/mine/albums/index.html.erb
+++ b/app/views/themes/waterfall/mine/albums/index.html.erb
@@ -1,7 +1,6 @@
-<div class="mine albums">
-<%= render "/mine/sub_nav", :action => params[:action] %>
-<div class="clear"></div>
-
+ <div class="whitespace">
+<div id="hp">
+  <%= render "mine/sub_nav" %>
 <div class="title_btn">
       <div class="btn_action">
         <a href="<%= url_for :action => 'upload' %>" class="btn_gray mr5">
@@ -14,18 +13,14 @@
       <h1>我的相册 <span class="font12">(共<%= @albums.total_count %>个)</span></h1>
       <div class="clear"></div>
 </div>
-
-
-
-
 <ul class="album_list">
   <% @albums.each do |album| %>
        	<li> 
           <a href="<%= album.id %>">
             <% if album.cover.present? %>
-        <%= image_tag album.cover.image_url( :normal), :class => 'cover' %>
+        <%= image_tag album.cover.image_url( :middle), :class => 'cover' %>
         <% else %>
-        <img class="cover" src="/assets/base/test/album_cover1.jpg" alt="木有图片" width="190" height="190" />
+        <%= theme_image_tag "test/album_cover.jpg", :class => :cover, :width => 150, :height => 150 %>
         <% end %>
           </a>
           <h2>
@@ -37,10 +32,6 @@
   <% end %>
   <div class="clear"></div>
 </ul>
-
-
-
-
 <div class="clear"></div>
 <div class="pagination">
  <%= paginate @albums, :outer_window => 2 %>
@@ -49,4 +40,5 @@
 $('.new_album').fancybox({padding:0, margin: 0, width: 450, height: 'auto', autoSize: false, modal: true});
 </script>
 <!-- end mine -->
+</div>
 </div>
