--- a/app/views/themes/waterfall/mine/albums/upload.html.erb
+++ b/app/views/themes/waterfall/mine/albums/upload.html.erb
@@ -1,17 +1,15 @@
-<div class="mine albums">
-<%= render "/mine/sub_nav", :action => params[:action] %>
+<div class="whitespace">
+<div id="hp" class="min_height">
+<%= render "mine/sub_nav", :action => params[:action] %>
 <div class="clear"></div>
 
-<div id="cu_user_menu" class="clearfix">
-  <span class="f14">《 <a href="<%= url_for :action => 'index' %>">返回相册首页</a></span>
-</div>
 <div class="title_btn clearfix">
   <h2>上传照片</h2>
 </div>
 <div id="leftcol" class="mr50">
   <div class="photo_upload">
     <p class="mb10">选择相册
-      <%= select("album", "name", @albums.collect {|album| [album.name, album.id] }, :selected => @select_album_id ) %>
+      <%= select("album", "name", @albums.collect {|album| [album.name, album.id] }, :selected => params[:album_id] || @albums.first.id  ) %>
       <a href="<%= url_for :action => 'new' %>" class="new_album fancybox.ajax icon_add_album ml20">新建相册</a>
     </p>
     <p class="mb10">
@@ -28,7 +26,9 @@
   var upload_params = {
     "<%= key = Rails.application.config.session_options[:key] %>" : "<%= cookies[key] %>",
     "<%= request_forgery_protection_token %>" : encodeURI(encodeURIComponent('<%= form_authenticity_token %>')),
-    'album_id' : '<%= @select_album_id %>',
+    'album_id' : '<%= @album_id %>',
+    'wine_id' : '<%= params[:wine_id] %>',
+    'winery_id' : '<%= params[:winery_id] %>',
     '_http_accept': 'application/javascript'
   };
 
@@ -52,42 +52,43 @@
     },
 
     onAllComplete: function(){
+      
       if( uploaded_image_ids.length < 1 ){
         alert( '有错误，请重试' );
         return;
       }
-
+      // window.location.href="/mine/albums/upload_list?album_id=" + upload_params['album_id'] + '&photo_ids=' + uploaded_image_ids.join();
       var hidden_field ,
-        form = document.createElement( 'form' );
-
-      form.action = '<%= url_for :action => 'upload_list' %>';
-      form.method = 'post';
-
-      hidden_field = document.createElement( 'input' );
-      hidden_field.type = 'hidden';
-      hidden_field.name = 'utf8';
-      hidden_field.value = '✓';
-      form.appendChild( hidden_field );
-
-      hidden_field = document.createElement( 'input' );
-      hidden_field.type = 'hidden';
-      hidden_field.name = '<%= request_forgery_protection_token %>';
-      hidden_field.value = '<%= form_authenticity_token %>';
-      form.appendChild( hidden_field );
-
-      hidden_field = document.createElement( 'input' );
-      hidden_field.type = 'hidden';
-      hidden_field.name = 'id';
-      hidden_field.value = upload_params.album_id;
-      form.appendChild( hidden_field );
-
-      hidden_field = document.createElement( 'input' );
-      hidden_field.type = 'hidden';
-      hidden_field.name = 'photo_ids';
-      hidden_field.value = uploaded_image_ids.join();
-      form.appendChild( hidden_field );
-
-      form.submit();
+           form = document.createElement( 'form' );
+         form.action = '<%= url_for :action => 'upload_list' %>';
+         form.method = 'post';
+         
+         hidden_field = document.createElement( 'input' );
+         hidden_field.type = 'hidden';
+         hidden_field.name = 'utf8';
+         hidden_field.value = '✓';
+         form.appendChild( hidden_field );
+         
+         hidden_field = document.createElement( 'input' );
+         hidden_field.type = 'hidden';
+         hidden_field.name = '<%= request_forgery_protection_token %>';
+         hidden_field.value = '<%= form_authenticity_token %>';
+         form.appendChild( hidden_field );
+         
+         hidden_field = document.createElement( 'input' );
+         hidden_field.type = 'hidden';
+         hidden_field.name = 'id';
+         hidden_field.value = upload_params.album_id;
+         form.appendChild( hidden_field );
+         
+         hidden_field = document.createElement( 'input' );
+         hidden_field.type = 'hidden';
+         hidden_field.name = 'photo_ids';
+         
+         hidden_field.value = uploaded_image_ids.join();
+         form.appendChild( hidden_field );
+         document.body.appendChild(form);
+         form.submit();
     }
   });
 
@@ -99,4 +100,5 @@
 $('.new_album').fancybox({padding:0, margin: 0, width: 450, height: 'auto', autoSize: false, modal: true});
 </script>
 <!-- end mine -->
+</div>
 </div>
