--- a/app/views/themes/waterfall/mine/cellar_items/_form.html.erb
+++ b/app/views/themes/waterfall/mine/cellar_items/_form.html.erb
@@ -64,7 +64,7 @@
 </div>
 <div class="right">
   <div class="wine_img">
-    <%= wine_cover_tag( @wine_detail, :thumb_name => "w_thumb", :title => @wine_detail.name, :width => 200, :height => 200, :alt => @wine_detail.name )%>
+    <%= wine_cover_tag( @wine_detail, :thumb_name => "thumb", :title => @wine_detail.name, :width => 200, :height => 200, :alt => @wine_detail.name )%>
   </div>
   <div class="clear"></div>
 </div>
