--- a/app/views/themes/waterfall/mine/comments.html.erb
+++ b/app/views/themes/waterfall/mine/comments.html.erb
@@ -1,4 +1,5 @@
-<div class="<%= controller_name  %> index simple_comments">
+<div class="whitespace">
+<div id="hp">
   <%= render "mine/sub_nav", :action => params[:action] %>
   <div class="clear"></div>
 
@@ -23,6 +24,7 @@
   </div>
 
   <!-- .mine end -->
+</div>
 </div>
 
 <div class="clear"></div>
