--- a/app/views/themes/waterfall/mine/followings.html.erb
+++ b/app/views/themes/waterfall/mine/followings.html.erb
@@ -1,4 +1,5 @@
-<div class="<%= controller_name %> index user_follows">
+<div class="whitespace">
+<div id="hp">
   <%= render "mine/sub_nav", :action => params[:action] %>
   <div class="clear"></div>
   <div class="left">
@@ -28,5 +29,6 @@
     <!-- right end -->
   </div>
   <!-- .mine end -->
+</div>
 </div>
 <div class="clear"></div>
