--- a/app/views/themes/waterfall/mine/wine_follows.html.erb
+++ b/app/views/themes/waterfall/mine/wine_follows.html.erb
@@ -1,5 +1,6 @@
-<div class="<%= controller_name  %> index wine_follows">
-  <%= render "mine/sub_nav", :action => params[:action] %>
+<div class="whitespace">
+<div id="hp">
+    <%= render "mine/sub_nav", :action => params[:action] %>
   <div class="clear"></div>
 
   <div class="left">
@@ -37,6 +38,6 @@
   </div>
   <!-- .mine end -->
 </div>
-
+</div>
 <div class="clear"></div>
 
