--- a/app/views/themes/waterfall/mine/wines/add_step_two.html.erb
+++ b/app/views/themes/waterfall/mine/wines/add_step_two.html.erb
@@ -21,7 +21,7 @@
             <div class="box">
               <div class="box_t"></div>
               <div class="box_main">
-                <div class="wine_img"><%= wine_cover_tag( detail, :thumb_name => "w_thumb", :width => "50", :height => "63" )%></div>
+                <div class="wine_img"><%= wine_cover_tag( detail, :thumb_name => "thumb", :width => "50", :height => "63" )%></div>
                 <div class="wine_info">
                   <h2><%= detail.wine.name_zh %></h2>
                   <h3><%= detail.wine.name_en %></h3>
