--- a/app/views/themes/waterfall/wine_details/_timeline.html.erb
+++ b/app/views/themes/waterfall/wine_details/_timeline.html.erb
@@ -3,7 +3,7 @@
 <% if l.event_type == "new_comment" %>
 <div class="iw item">
   	<div class="iw_img">
-			<%= link_to wine_waterfall_image_tag(l.secondary_actor, :thumb_name => :w_middle), wine_path(l.secondary_actor) %>
+			<%= link_to wine_waterfall_image_tag(l.secondary_actor, :thumb_name => :middle), wine_path(l.secondary_actor) %>
 		</div>
       <div class="iw_info">
           <h1>
@@ -42,7 +42,7 @@
 <% elsif l.event_type == "add_to_cellar" %>
 <div class="iw item">
   	<div class="iw_img">
-				<%= link_to wine_waterfall_image_tag(l.secondary_actor, :thumb_name => :w_middle), wine_path(l.secondary_actor) %>
+				<%= link_to wine_waterfall_image_tag(l.secondary_actor, :thumb_name => :middle), wine_path(l.secondary_actor) %>
 		</div>
       <div class="iw_info">
         <h1>
