--- a/app/views/wine_details/share/_cover.html.erb
+++ b/app/views/wine_details/share/_cover.html.erb
@@ -2,7 +2,7 @@
 	<div id="preview_outer">
 		<div id="preview_inner">
 			<% @wine_detail.covers.each do |photo,index| %>
-		    <div><%= image_tag @wine_detail.photo.image_url(:w_large) %></div>
+		    <div><%= image_tag @wine_detail.photo.image_url(:large) %></div>
 		  <% end %>
 		</div>
 	</div>
@@ -10,7 +10,7 @@
 <div id="thumbs">
 	<!--<div id="arrow"></div>-->
 	<% @wine_detail.covers.each do |photo,index| %>
-    <span><%= image_tag @wine_detail.photo.image_url(:w_thumb) %></span>
+    <span><%= image_tag @wine_detail.photo.image_url(:thumb) %></span>
   <% end %>
 </div>
 
