--- a/app/views/wines/share/_photos.html.erb
+++ b/app/views/wines/share/_photos.html.erb
@@ -10,6 +10,6 @@
 
 <div class="items">
   <% @wine_detail.photos.each do |photo| %>
-    <%= link_to image_tag(photo.image_url(:w_thumb), :width => 90, :height => 90), "/" %>
+    <%= link_to image_tag(photo.image_url(:thumb), :width => 90, :height => 90), "/" %>
   <% end %>
 </div>
