--- a/app/views/themes/waterfall/wineries/_thumb_photo.html.erb
+++ b/app/views/themes/waterfall/wineries/_thumb_photo.html.erb
@@ -1,6 +1,6 @@
 <li>
   <%= link_to "#" do %>
-      <%= image_tag photo.image_url(:wy_thumb), :alt => "酒庄图片" %>
+      <%= image_tag photo.image_url(:thumb), :alt => "酒庄图片" %>
   <% end %>
 </li>
 
