--- a/app/views/themes/waterfall/wine_details/comments/comment.js.erb
+++ b/app/views/themes/waterfall/wine_details/comments/comment.js.erb
@@ -1,2 +1,2 @@
 $("#comment_form").html("<%= escape_javascript(render('comment_form', :comment => @comment, :wine_detail => @wine_detail)) %>");
-<%= render "/wine_details/share/star_rate.js" %>
+<%= render "comments/star_rate.js" %>
