--- a/app/views/themes/waterfall/wine_details/share/_photos.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_photos.html.erb
@@ -1,5 +1,8 @@
 <div class="title_btn">
-	<a href="#" class="btn_gray float_r"><span>添加照片</span></a>
+	<a href="#" class="btn_gray float_r"></a>
+	<%= link_to  upload_mine_albums_path(:wine_id => @wine_detail.id ), :class => [:btn_gray, :float_r] do %>
+	  <span>添加照片</span>
+	<% end %>
 	<h2>
 		所有照片
 		<span class="font12 more">
