Fixed bugs  about fetch records.
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/themes/waterfall/comments/_comment_reply_form.html.erb
+++ b/app/views/themes/waterfall/comments/_comment_reply_form.html.erb
@@ -9,10 +9,10 @@
   </table>
 <% end -%>
 
-<% if @comment.children.size > 0 %>
+<% if @comment.children.all.size > 0 %>
 <ul class="reply_list clearfix">
 
-  <% @comment.children.each do |comment| %>
+  <% @comment.children.all.each do |comment| %>
 
 	<li>
     	<div class="userpic">
