--- a/app/views/themes/waterfall/photos/wine_photo_detail.html.erb
+++ b/app/views/themes/waterfall/photos/wine_photo_detail.html.erb
@@ -27,7 +27,7 @@
 				
 				<%= render :partial => 'share/sns_icons' %>
 				
-				<div><%= @photo.viewed_num %>浏览 | <%= @comments.count %>评论</div>
+				<div><%= @photo.views_count %>浏览 | <%= @comments.count %>评论</div>
 			</div>
 			<div class="comment">
 				<div class="mb20 clearfix">
