--- a/public/template/add_wine_new_detail_2.html
+++ b/public/template/add_wine_new_detail_2.html
@@ -29,6 +29,14 @@
             <div class="clear"></div>
         </div>
     </div>
+    <div class="globel_navi">
+    	<ul>
+        	<li class="current"><a href="index.html">首页</a></li>
+            <li class="arrow"><a href="wine.html">酒款</a></li>
+            <li class="last arrow"><a href="winery.html">酒庄</a></li>
+            <div class="clear"></div>
+      </ul>
+    </div>
     <div id="wrapper950" >
     	<div class="whitespace addwine">
             <h1 class="main_title">添加藏酒</h1>
@@ -128,7 +136,7 @@
                    <div class="optional">
                    		<label>简介</label>
                         <textarea class="wine_intro" name="" cols="" rows=""></textarea>
-      </div>
+                  </div>
                     <div class="mt10">
                        <label>&nbsp;</label>
                        <div class="content"><a href="add_wine_success.html" class="btn_gray mr5"><span>提交信息</span></a></div>
