--- a/public/template/add_wine_success.html
+++ b/public/template/add_wine_success.html
@@ -4,7 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
-<link href="stylesheets/hp.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/add.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -28,6 +27,14 @@
             </div>
             <div class="clear"></div>
         </div>
+    </div>
+    <div class="globel_navi">
+    	<ul>
+        	<li class="current"><a href="index.html">首页</a></li>
+            <li class="arrow"><a href="wine.html">酒款</a></li>
+            <li class="last arrow"><a href="winery.html">酒庄</a></li>
+            <div class="clear"></div>
+      </ul>
     </div>
     <div id="wrapper950">
     	<div class="whitespace addwine">
