--- a/public/template/friends_sns_unbound.html
+++ b/public/template/friends_sns_unbound.html
@@ -37,28 +37,23 @@
       </ul>
     </div>
     <div id="wrapper950">
-    	<div class="whitespace setting">
-            <h1 class="main_title">头像修改</h1>
-            <div id="stylized" class="myform">
-            <form id="form" name="form" method="post" action="#">
-                <div class="left">
-                   <p>从电脑上传（支持JPG、GIF、PNG图片格式，且小于5M）</p>
-                  <p class="mt20"><input name="text" type="text" class="text name mr5" value="" /><a href="#" class="btn_gray"><span>选择照片</span></a></p>
-                   <p class="mt20"><img src="images/common/userpic_upload.jpg" width="280" height="280" /></p>
-                   <p class="mt20"><a href="album_photo_upload3.html" class="btn_gray mr5"><span>保存头像</span></a><a href="album_photo_upload3.html" class="btn_gray "><span>取消</span></a></p>
-               </div>
-               <div class="right">
-               		<div class="avatar">
-                       <p class="mb10">您上传的头像会自动生成以下三种尺寸，<br />
-                       请确保中小尺寸的头像是否清晰。</p>
-                      <p class="sample"><img src="images/common/userpic_sample130.jpg" width="130" height="130" /> <span>大图 130*130px</span></p>
-                       <p class="sample"><img src="images/common/userpic_sample50.jpg" width="50" height="50" /> <span>中图 50*50px</span></p>
-                       <p class="sample"><img src="images/common/userpic_sample30.jpg" width="30" height="30" /> <span>小图 30*30px</span></p>
-                    </div>
-               </div>
-               <div class="clear"></div>
-            </form>
-        </div>
+    	<div class="whitespace friends">
+            <h1 class="main_title">添加好友</h1>
+          <div class="gray_box">
+            	<h3>通过社交平台来寻找好友</h3>
+                <p class="snsSearch">
+                	<a href="friends_sns_bound.html"><img src="images/common/icon_sina_on.png" width="44" height="44" align="absmiddle" /></a>
+                    <a href="#"><img src="images/common/icon_qq_on.png" width="44" height="44" align="absmiddle" /></a>
+                    <a href="#"><img src="images/common/icon_douban_on.png" width="44" height="44" align="absmiddle" /></a>
+                    <a href="#"><img src="images/common/icon_kaixin_on.png" width="44" height="44" align="absmiddle" /></a>
+                    <a href="#"><img src="images/common/icon_renren_off.png" width="44" height="44" align="absmiddle" /></a>
+            </p>
+                <p><a href="#" class="btn_gray mr5"><span>搜索全部同步项</span></a><a href="#" class="btn_gray"><span>更改同步设置</span></a></p>
+          </div>
+          <div class="mt20">
+          	<p class="mb30"><span class="font14">您还没有设置人人网帐号</span></p>
+            <div class="align_c"><a href="#"><img src="images/common/btn_syn_renren.jpg" width="229" height="80" alt="人人网" /></a></div>
+          </div>
    	  </div>
     </div>
     <div id="footer">
