--- a/public/template/search_wine.html
+++ b/public/template/search_wine.html
@@ -28,6 +28,14 @@
             <div class="clear"></div>
         </div>
     </div>
+    <div class="globel_navi">
+    	<ul>
+        	<li class="current"><a href="index.html">首页</a></li>
+            <li class="arrow"><a href="wine.html">酒款</a></li>
+            <li class="last arrow"><a href="winery.html">酒庄</a></li>
+            <div class="clear"></div>
+      </ul>
+    </div>
     <div id="wrapper950">
         <div class="whitespace normal search">
         	<div class="left">
