--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -66,6 +66,7 @@ input.common_search {width:250px;}
 .share img{margin:0 5px 0 0;}
 .year span a {margin:0 5px 0 0;color:#993333;text-decoration:underline;display:inline-block;}
 .year span a:hover {text-decoration:none;color:#993333;}
+.gray_box {padding:20px;background-color:#f3f3f3;}
 
 /*notice style*/
 .error, .alert, .notice, .success, .information {padding:0.8em;text-align:center;}
@@ -235,8 +236,28 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
     padding: 5px 10px;
     text-decoration: none;
 }
-.globel_navi {padding:10px;text-align:center;background:url(../images/bg/bg.jpg) repeat; border-bottom:1px solid #ccc;font-size:14px;font-weight:bold;}
-.globel_navi span a{display:inline-block;margin:0 20px;}
+.search_scroll {width:348px; position:absolute;left:320px;top:38px;border:1px solid #999;border-top:none;background-color: #fff;border-radius:3px 3px 3px 3px;color:#333;z-index:1;}
+.search_scroll .current {background-color:#f3f3f3;}
+.search_scroll p.title a  {display:block;border-top:1px solid #ccc;padding:5px 10px;}
+.search_scroll dl {border-top:1px dotted #ccc;padding:5px 10px 5px 20px;}
+.search_scroll dt {width:30px;float:left;margin-right:10px;}
+.search_scroll dd {float:left;}
+.search_scroll dd p {color:#999;}
+.search_scroll p.title a:hover {background-color:#f3f3f3;text-decoration:none;}
+.globel_navi {padding:10px;text-align:center;background-color:#fff;border-bottom:1px solid #ccc;font-size:14px;}
+.globel_navi li {display:inline;position:relative;}
+.globel_navi li.current {font-weight:bold;}
+.globel_navi li.arrow {background:url(../images/icon/xstb_276.gif) no-repeat 50px 0;}
+.globel_navi li a{display:inline-block;padding:0 20px;color:#000;}
+.globel_navi li.last a {background:none;}
+.globel_navi li a:hover {color:#000;}
+.globel_navi li ul {position:absolute;background-color:#fff;border-top:1px solid #ccc;left:0;top:27px;_top:30px;font-size:12px;text-align:left;width:250px;box-shadow: 0 2px 2px 1px #999;}
+.CategoryDropdown p.title {font-weight:bold;padding:5px 10px;border-bottom:1px dotted #ccc;background-color:#f3f3f3;}
+.CategoryDropdown .item {padding:10px;border-bottom:1px dotted #ccc;}
+.CategoryDropdown span a {background:none;padding:0 5px;}
+.CategoryDropdown .hot dt {width:30px;float:left;margin-right:10px;}
+.CategoryDropdown .hot dd {width:190px;float:left;}
+.CategoryDropdown .hot dt a, .CategoryDropdown .hot dd a {padding:0;background:none;color:#333;}
 
 /*main space*/
 #wrapper950 {width:950px;margin: 30px auto;}
