--- a/public/template/user_notice_setting.html
+++ b/public/template/user_notice_setting.html
@@ -30,12 +30,11 @@
     </div>
     <div class="globel_navi">
     	<ul>
-        	<span><a href="index.html">首页</a></span>
-            <span><a href="wine.html">酒款</a></span>
-            <span><a href="winery.html">酒庄</a></span>
-            <span><a href="event.html">活动</a></span>
+        	<li class="current"><a href="index.html">首页</a></li>
+            <li class="arrow"><a href="wine.html">酒款</a></li>
+            <li class="last arrow"><a href="winery.html">酒庄</a></li>
             <div class="clear"></div>
-        </ul>
+      </ul>
     </div>
     <div id="wrapper950">
     	<div class="whitespace setting">
