--- a/public/template/winery.html
+++ b/public/template/winery.html
@@ -32,65 +32,14 @@
     <div class="globel_navi">
     	<ul>
         	<li class="current"><a href="index.html">首页</a></li>
-            <li class="arrow">
-            	<a href="wine.html">酒款</a>
-            	<ul class="CategoryDropdown">
-                	<li>
-                        <p class="title">类型</p>
-                        <div class="item">
-                            <span><a href="#">红葡萄酒</a></span>
-                            <span><a href="#">白葡萄酒</a></span>
-                            <span><a href="#">气泡酒</a></span>
-                            <span><a href="#">香槟</a></span>
-                        </div>
-                    </li>
-                    <li>
-                        <p class="title">国家</p>
-                        <div class="item">
-                            <span><a href="#">法国</a></span>
-                            <span><a href="#">意大利</a></span>
-                            <span><a href="#">西班牙</a></span>
-                            <span><a href="#">德国</a></span>
-                            <span><a href="#">奥地利</a></span>
-                            <span><a href="#">澳洲</a></span>
-                            <span><a href="#">新西兰</a></span>
-                            <span><a href="#">智利</a></span>
-                            <span><a href="#">阿根廷</a></span>
-                            <span><a href="#">美国</a></span>
-                            <span><a href="#">南非</a></span>
-                        </div>
-                    </li>
-                    <li>
-                        <p class="title">热门产区</p>
-                        <div class="item">
-                            <span><a href="#">波尔多</a></span>
-                            <span><a href="#">勃艮第</a></span>
-                            <span><a href="#">纳帕谷</a></span>
-                        </div>
-                    </li>
-                    <li>
-                        <p class="title">热门酒款</p>
-                        <div class="item hot">
-                            <dl class="clearfix">
-                                	<dt><a href="wine_profile.html"><img src="images/test/wine_thumb01.jpg" width="30" height="30" /></a></dt>
-                                    <dd>
-                                        <span><a href="wine_profile.html">2001拉菲珍宝</a></span>
-                                        <p><a href="wine_profile.html">PORTER MILL STATION Cabernet Sauvignon</a></p>
-                                    </dd>
-                                    <div class="clear"></div>
-                                </dl>
-                        </div>
-                    </li>
-                </ul>
-            </li>
+            <li class="arrow"><a href="wine.html">酒款</a></li>
             <li class="last arrow"><a href="winery.html">酒庄</a></li>
             <div class="clear"></div>
       </ul>
-        <div class="category"></div>
     </div>
     <div id="home">
     	<div class="iw">
-        	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200.jpg" width="200" height="294" /></a></div>
+        	<div class="iw_img"><a href="winery_profile.html"><img src="images/test/col_img200.jpg" width="200" height="294" /></a></div>
             <div class="iw_info">
                 <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
                 <h2><a href="wine_profile.html">Carruades de Lafite</a></h2>
@@ -143,7 +92,7 @@
             <div class="iw_more"><a href="#">共7条评论</a></div>
       </div>
       <div class="iw">
-        	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200_2.jpg" width="200" height="150" /></a></div>
+        	<div class="iw_img"><a href="winery_profile.html"><img src="images/test/col_img200_2.jpg" width="200" height="150" /></a></div>
             <div class="iw_info">
                 <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
                 <h2><a href="wine_profile.html">Carruades de Lafite</a></h2>
@@ -164,7 +113,7 @@
             <div class="iw_more"><a href="#">去看看这个活动</a></div>
       </div>
       <div class="iw">
-        	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200_3.jpg" width="200" height="266" /></a></div>
+        	<div class="iw_img"><a href="winery_profile.html"><img src="images/test/col_img200_3.jpg" width="200" height="266" /></a></div>
             <div class="iw_info">
                 <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
                 <h2><a href="wine_profile.html">Carruades de Lafite</a></h2>
